--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </p>
 
     <div class="map">
-      <img src="/public/images/map.png" alt="Hướng dẫn đường đi">
+      <img src="./public/images/map.png" alt="Hướng dẫn đường đi">
     </div>
 
     <a href="#" class="btn">Xác nhận tham gia</a>
