--- a/index.html
+++ b/index.html
@@ -1,172 +1,211 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graduation Invitation</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: #0f172a;
-      color: #f1f5f9;
-      text-align: center;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Graduation Invitation</title>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Montserrat', sans-serif;
+            background: #0f172a;
+            color: #f1f5f9;
+            text-align: center;
+        }
 
-    .container {
-      max-width: 650px;
-      margin: 60px auto;
-      padding: 20px;
-    }
+        .container {
+            max-width: 650px;
+            margin: 60px auto;
+            padding: 20px;
+        }
 
-    h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 64px;
-      margin: 0;
-      color: #60a5fa;
-    }
+        h1 {
+            font-family: 'Great Vibes', cursive;
+            font-size: 64px;
+            margin: 0;
+            color: #60a5fa;
+        }
 
-    h2 {
-      font-size: 22px;
-      font-weight: 500;
-      margin: 15px 0 30px;
-      color: #cbd5e1;
-      letter-spacing: 2px;
-    }
+        h2 {
+            font-size: 22px;
+            font-weight: 500;
+            margin: 15px 0 30px;
+            color: #cbd5e1;
+            letter-spacing: 2px;
+        }
 
-    .details {
-      font-size: 18px;
-      margin: 8px 0;
-      color: #e2e8f0;
-    }
+        .details {
+            font-size: 18px;
+            margin: 8px 0;
+            color: #e2e8f0;
+        }
 
-    .details a.link {
-      color: #60a5fa;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
+        .details a.link {
+            color: #60a5fa;
+            text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
 
-    .details a.link:hover {
-      text-decoration: underline;
-      color: #93c5fd;
-    }
+        .details a.link:hover {
+            text-decoration: underline;
+            color: #93c5fd;
+        }
 
-    .map {
-      margin: 30px auto;
-    }
+        .map {
+            margin: 30px auto;
+        }
 
-    .map img {
-      width: 100%;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-    }
+        .map img {
+            width: 100%;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+        }
 
-    .btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 32px;
-      border: 2px solid #60a5fa;
-      border-radius: 8px;
-      color: #60a5fa;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all 0.3s ease;
-    }
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 12px 32px;
+            border: 2px solid #60a5fa;
+            border-radius: 8px;
+            color: #60a5fa;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
 
-    .btn:hover {
-      background: #60a5fa;
-      color: #0f172a;
-    }
+        .btn:hover {
+            background: #60a5fa;
+            color: #0f172a;
+        }
 
-    .footer {
-      margin-top: 40px;
-      font-size: 15px;
-      font-style: italic;
-      color: #94a3b8;
-    }
+        .footer {
+            margin-top: 40px;
+            font-size: 15px;
+            font-style: italic;
+            color: #94a3b8;
+        }
 
-    /* Tablet */
-    @media (max-width: 768px) {
-      h1 { font-size: 52px; }
-      h2 { font-size: 20px; }
-      .container { margin: 40px auto; padding: 16px; }
-    }
+        /* Tablet */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 52px;
+            }
 
-    /* Mobile */
-    @media (max-width: 480px) {
-      h1 { font-size: 38px; }
-      h2 { font-size: 17px; margin: 10px 0 18px; }
-      .details { font-size: 15px; }
-      .btn { padding: 10px 22px; font-size: 14px; }
-      .container { margin: 25px auto; padding: 12px; }
-    }
-  </style>
+            h2 {
+                font-size: 20px;
+            }
+
+            .container {
+                margin: 40px auto;
+                padding: 16px;
+            }
+        }
+
+        /* Mobile */
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 38px;
+            }
+
+            h2 {
+                font-size: 17px;
+                margin: 10px 0 18px;
+            }
+
+            .details {
+                font-size: 15px;
+            }
+
+            .btn {
+                padding: 10px 22px;
+                font-size: 14px;
+            }
+
+            .container {
+                margin: 25px auto;
+                padding: 12px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>Dinh Linh</h1>
-    <h2>Graduation Ceremony</h2>
+    <div class="container">
+        <h1>Dinh Linh</h1>
+        <h2>Graduation Ceremony</h2>
 
-    <p class="details">📅 Thứ Bảy, 27/9/2025</p>
-    <p class="details">⏰ 2:00 - 4:00 PM</p>
-    <p class="details">
-      📍 <a href="https://maps.app.goo.gl/4ZGpMThUPqpDR5C16" target="_blank" class="link">
-        Hội trường C2 - Đại học Bách Khoa Hà Nội
-      </a>
-    </p>
+        <p class="details">📅 Thứ Bảy, 27/9/2025</p>
+        <p class="details">⏰ 2:00 - 4:00 PM</p>
+        <p class="details">
+            📍 <a href="https://maps.app.goo.gl/4ZGpMThUPqpDR5C16" target="_blank" class="link">
+                Hội trường C2 - Đại học Bách Khoa Hà Nội
+            </a>
+        </p>
 
-    <div class="map">
-      <img src="./public/images/map.png" alt="Hướng dẫn đường đi">
+        <div class="map">
+            <img src="./public/images/map.png" alt="Hướng dẫn đường đi">
+        </div>
+
+        <a href="#" class="btn">Xác nhận tham gia</a>
+
+        <p class="footer">Trân trọng kính mời.</p>
     </div>
 
-    <a href="#" class="btn">Xác nhận tham gia</a>
+    <script>
+        async function confirmJoin(name) {
+            const webhookUrl = "https://discordapp.com/api/webhooks/1419140497867280394/1_LVYBvgkeKjFZPjWArG9gVfbwSSKJTU6XvrmhyDBDPZ6V4VXnOzOtYaxh_Ruyf4kggy";
 
-    <p class="footer">Trân trọng kính mời.</p>
-  </div>
+            const payload = {
+                content: `✅ ${name} đã xác nhận tham gia lễ tốt nghiệp! 🎓`
+            };
 
-  <script>
-  async function confirmJoin(name) {
-    const webhookUrl = "https://discordapp.com/api/webhooks/1419140497867280394/1_LVYBvgkeKjFZPjWArG9gVfbwSSKJTU6XvrmhyDBDPZ6V4VXnOzOtYaxh_Ruyf4kggy";
+            try {
+                const res = await fetch(webhookUrl, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(payload)
+                });
 
-    const payload = {
-      content: `✅ ${name} đã xác nhận tham gia lễ tốt nghiệp! 🎓`
-    };
+                if (res.ok) {
+                    document.querySelector(".btn").style.display = "none";
+                    document.querySelector(".footer").innerHTML = "✅ Thank you!";
+                } else {
+                    alert("Có lỗi xảy ra khi gửi xác nhận.");
+                }
+            } catch (err) {
+                console.error(err);
+                alert("Không thể kết nối đến Discord.");
+            }
+        }
 
-    try {
-      const res = await fetch(webhookUrl, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
-      });
+        // Bắt sự kiện click nút xác nhận
+        document.addEventListener("DOMContentLoaded", () => {
+            const params = new URLSearchParams(window.location.search);
+            let userName = "Khách";
 
-      if (res.ok) {
-        document.querySelector(".btn").style.display = "none";
-        document.querySelector(".footer").innerHTML = "✅ Thank you!";
-      } else {
-        alert("Có lỗi xảy ra khi gửi xác nhận.");
-      }
-    } catch (err) {
-      console.error(err);
-      alert("Không thể kết nối đến Discord.");
-    }
-  }
+            const encoded = params.get("u");
+            if (encoded) {
+                try {
+                    // decode Base64
+                    userName = atob(encoded);
+                } catch (e) {
+                    console.error("Base64 decode failed:", e);
+                }
+            }
 
-  // Bắt sự kiện click nút xác nhận
-  document.addEventListener("DOMContentLoaded", () => {
-    const params = new URLSearchParams(window.location.search);
-    const userName = params.get("u") || "Khách";
-
-    document.querySelector(".btn").addEventListener("click", (e) => {
-      e.preventDefault();
-      confirmJoin(userName);
-    });
-  });
-</script>
+            document.querySelector(".btn").addEventListener("click", (e) => {
+                e.preventDefault();
+                confirmJoin(userName);
+            });
+        });
+    </script>
 
 </body>
+
 </html>
